<resources>
    <string name="app_name">nav-bar-bottom</string>
    <string name="summary">Thông kê</string>
    <string name="cutomers">Khách hàng</string>
    <string name="promotion">Khuyến mãi</string>
    <string name="receit">Đơn hàng</string>
    <string name="management">Quản lý</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_text">Loading ...</string>
</resources>
