<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/receit"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/receit" />

    <item
        android:id="@+id/promotion"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/promotion" />

    <item
        android:id="@+id/cutomers"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/cutomers" />

    <item
        android:id="@+id/summary"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/summary" />

    <item
        android:id="@+id/management"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/management" />

</menu>
